--- a/kamala/templates/index.html
+++ b/kamala/templates/index.html
@@ -7,6 +7,7 @@
   {{ dropzone.style('border: 2px dashed #0087F7; margin: 10%; min-height: 400px;') }}
 </head>
 <body>
+<center>
 <p>&nbsp;</p>
 <p>{{ dropzone.load_css() }} {{ dropzone.style('border: 2px dashed #0087F7; margin: 10%; min-height: 400px;') }}</p>
 <p>Hi! :)</p>
@@ -14,6 +15,7 @@
 <p>Отчёт из Клиентикс перетащить на область выделенную пунктиром (или кликнуть по ней и выбрать файл).</p>
 <p>После загрузки файла на сервер нажать кнопку <em>Download</em>.</p>
 <p>&nbsp;</p>
-<p><a href="/kamala-services-per-day-file"><button>Download</button></a> {{ dropzone.create(action='upload') }} {{ dropzone.load_js() }} {{ dropzone.config() }}</p>
+<p><a href="/kamala-services-per-day-file"><button>Download</button></a></center></p>
+{{ dropzone.create(action='upload') }} {{ dropzone.load_js() }} {{ dropzone.config() }}
 </body>
 </html>
